# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  docker.txt  pyproject.toml  requirements.txt
games/: models.py  serializer.py  tests.py  urls.py  views.py
games/migrations/: 0001_initial.py
games_api_project/: asgi.py  settings.py  urls.py  wsgi.py
